crates/macros/tests/ui/validator_length_range_non_string_fail.rs
use nebula_macros::Validator;

#[derive(Validator)]
struct InvalidLengthRange {
    #[validate(length_range(min = 1, max = 3))]
    count: u32,
}

fn main() {}
